// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner snapshot constrain 1`] = `
<div
  class="component constrain passive"
  data-test="Banner"
  role="alert"
/>
`;

exports[`Banner snapshot default 1`] = `
<div
  class="component passive"
  data-test="Banner"
  role="alert"
/>
`;

exports[`Banner snapshot offer dismiss 1`] = `
<div
  class="component offerDismiss passive"
  data-test="Banner"
  role="alert"
>
  <button
    class="closeButton"
    data-test="Banner-closeButton"
  >
    <svg
      class="haloIcon"
      viewBox="0 0 10 10"
    >
      <path
        d="M9.802 2.108a.675.675 0 0 0 0-.955L8.847.198a.675.675 0 0 0-.956 0L5.08 3.01a.113.113 0 0 1-.159 0L2.108.198a.675.675 0 0 0-.955 0l-.955.955a.675.675 0 0 0 0 .955L3.01 4.92a.113.113 0 0 1 0 .16L.198 7.892a.675.675 0 0 0 0 .955l.955.955a.675.675 0 0 0 .955 0L4.92 6.99a.113.113 0 0 1 .16 0l2.81 2.812a.675.675 0 0 0 .956 0l.955-.955a.675.675 0 0 0 0-.955L6.99 5.08a.113.113 0 0 1 0-.16l2.812-2.812z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Banner snapshot variant error 1`] = `
<div
  class="component error"
  data-test="Banner"
  role="alert"
/>
`;

exports[`Banner snapshot variant success 1`] = `
<div
  class="component success"
  data-test="Banner"
  role="alert"
/>
`;

exports[`Banner snapshot variant warning 1`] = `
<div
  class="component warning"
  data-test="Banner"
  role="alert"
/>
`;
